# django-blog

./: Pipfile  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html  home.html  post_details.html  post_edit.html
