[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Sergey A. <sergey.abramenka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=3.2"
gunicorn = "^20.1"
dj-database-url = "^0.5"
psycopg2-binary = "^2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
